Actions
Bug #20023
closedrb_require("noexist") causes segfault
Bug #20023:
rb_require("noexist") causes segfault
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.3.0dev (2023-11-27 master a07d84b63c) [x86_64-linux]
Description
Extracted from swig 4.1.1 testsuite.
With a07d84b63c (and probably with earlier commit), rb_require("noexist") ; seems segfault.
foo.rb:
#!/usr/bin/env ruby
begin
require "bar"
rescue LoadError => e
p e.to_s
end
bar.c:
#include <ruby.h>
void Init_bar(void) {
VALUE m_bar = rb_define_module("Bar");
rb_require("noexist");
}
Execute:
gcc -shared -I/usr/include -Wall -O2 -g -fpic -fPIC -o bar.so bar.c
ruby -I. foo.rb
With ruby 3.2.2 (2023-03-30 revision e51014f9c0) [x86_64-linux]: OK
+ ruby -I. foo.rb
"cannot load such file -- noexist"
With ruby 3.3.0dev (2023-11-27 master a07d84b63c) [x86_64-linux]:
+ ruby -I. foo.rb
<internal:/usr/share/rubygems/rubygems/core_ext/kernel_require.rb>:129: [BUG] Segmentation fault at 0x0000000000000000
ruby 3.3.0dev (2023-11-27 master a07d84b63c) [x86_64-linux]
-- Control frame information -----------------------------------------------
c:0004 p:0020 s:0019 e:000016 RESCUE <internal:/usr/share/rubygems/rubygems/core_ext/kernel_require.rb>:129
c:0003 p:0024 s:0013 e:000012 METHOD <internal:/usr/share/rubygems/rubygems/core_ext/kernel_require.rb>:126
c:0002 p:0005 s:0007 E:000818 EVAL foo.rb:4 [FINISH]
c:0001 p:0000 s:0003 E:001d70 DUMMY [FINISH]
-- Ruby level backtrace information ----------------------------------------
foo.rb:4:in `<main>'
<internal:/usr/share/rubygems/rubygems/core_ext/kernel_require.rb>:126:in `require'
<internal:/usr/share/rubygems/rubygems/core_ext/kernel_require.rb>:129:in `rescue in require'
-- Threading information ---------------------------------------------------
Total ractor count: 1
Ruby thread count for this ractor: 1
-- Machine register context ------------------------------------------------
RIP: 0x00007feedd015807 RBP: 0x00007ffd9f27ad00 RSP: 0x00007ffd9f27ac98
RAX: 0x000000000000008c RBX: 0x0000008c00100003 RCX: 0x00007feedd34dc78
RDX: 0x00007ffd9f27acb8 RDI: 0x0041710f058b48c3 RSI: 0x000000000000008c
R8: 0x00007feec1788690 R9: 0x00007ffd9f27a8a0 R10: 0x00007feedc98dc08
R11: 0x0000000000000001 R12: 0x00007feedcf35049 R13: 0x0041710f058b48c3
R14: 0x0000562a51a61c20 R15: 0x000000000000008c EFL: 0x0000000000010206
-- C level backtrace information -------------------------------------------
/lib64/libruby.so.3.3(rb_print_backtrace+0x21) [0x7feedd078041] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/vm_dump.c:820
/lib64/libruby.so.3.3(rb_vm_bugreport+0x9aa) [0x7feedd07adda] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/vm_dump.c:1151
/lib64/libruby.so.3.3(rb_bug_for_fatal_signal+0x110) [0x7feedced5900] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/error.c:1065
/lib64/libruby.so.3.3(sigsegv+0x56) [0x7feedcfeef06] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/signal.c:920
/lib64/libc.so.6(__restore_rt+0x0) [0x7feedcc5b9a0]
/lib64/libruby.so.3.3(rb_id_table_lookup+0x7) [0x7feedd015807] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/symbol.h:72
/lib64/libruby.so.3.3(vm_search_cc.lto_priv.0+0x58) [0x7feedd04dc58] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/vm_insnhelper.c:2032
/lib64/libruby.so.3.3(vm_search_method_slowpath0.lto_priv.0+0x39) [0x7feedd04e0d9] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/vm_insnhelper.c:2128
/lib64/libruby.so.3.3(vm_exec_core.lto_priv.0+0x4d7e) [0x7feedd062c1e] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/vm_insnhelper.c:2210
/lib64/libruby.so.3.3(rb_vm_exec+0x39e) [0x7feedd07665e] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/vm.c:2494
/lib64/libruby.so.3.3(rb_ec_exec_node+0xaa) [0x7feedcedb02a] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/eval.c:287
/lib64/libruby.so.3.3(ruby_run_node+0x93) [0x7feedcedba73] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/eval.c:328
/usr/bin/ruby-mri(0x562a5047f197) [0x562a5047f197]
/lib64/libc.so.6(__libc_start_call_main+0x7a) [0x7feedcc4514a]
/lib64/libc.so.6(__libc_start_main+0x8b) [0x7feedcc4520b]
/usr/bin/ruby-mri(_start+0x25) [0x562a5047f1e5] /usr/src/debug/ruby-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64/main.c:59
-- Other runtime information -----------------------------------------------
* Loaded script: foo.rb
* Loaded features:
0 enumerator.so
1 thread.rb
2 fiber.so
3 rational.so
4 complex.so
5 ruby2_keywords.rb
6 /usr/lib64/ruby/enc/encdb.so
7 /usr/lib64/ruby/enc/trans/transdb.so
8 /usr/lib64/ruby/rbconfig.rb
9 /usr/share/rubygems/rubygems/compatibility.rb
10 /usr/share/rubygems/rubygems/defaults.rb
11 /usr/share/rubygems/rubygems/deprecate.rb
12 /usr/share/rubygems/rubygems/errors.rb
13 /usr/share/rubygems/rubygems/unknown_command_spell_checker.rb
14 /usr/share/rubygems/rubygems/exceptions.rb
15 /usr/share/rubygems/rubygems/basic_specification.rb
16 /usr/share/rubygems/rubygems/stub_specification.rb
17 /usr/share/rubygems/rubygems/platform.rb
18 /usr/share/rubygems/rubygems/util/list.rb
19 /usr/share/rubygems/rubygems/version.rb
20 /usr/share/rubygems/rubygems/requirement.rb
21 /usr/share/rubygems/rubygems/specification.rb
22 /usr/share/rubygems/rubygems/defaults/operating_system.rb
23 /usr/share/rubygems/rubygems/util.rb
24 /usr/share/rubygems/rubygems/dependency.rb
25 /usr/share/rubygems/rubygems/core_ext/kernel_gem.rb
26 /usr/lib64/ruby/monitor.so
27 /usr/share/ruby/monitor.rb
28 /usr/share/rubygems/rubygems.rb
29 /usr/share/ruby/bundled_gems.rb
30 /usr/share/rubygems/rubygems/path_support.rb
31 /usr/share/ruby/error_highlight/version.rb
32 /usr/share/ruby/error_highlight/base.rb
33 /usr/share/ruby/error_highlight/formatter.rb
34 /usr/share/ruby/error_highlight/core_ext.rb
35 /usr/share/ruby/error_highlight.rb
36 /usr/share/ruby/did_you_mean/version.rb
37 /usr/share/ruby/did_you_mean/core_ext/name_error.rb
38 /usr/share/ruby/did_you_mean/levenshtein.rb
39 /usr/share/ruby/did_you_mean/jaro_winkler.rb
40 /usr/share/ruby/did_you_mean/spell_checker.rb
41 /usr/share/ruby/did_you_mean/spell_checkers/name_error_checkers/class_name_checker.rb
42 /usr/share/ruby/did_you_mean/spell_checkers/name_error_checkers/variable_name_checker.rb
43 /usr/share/ruby/did_you_mean/spell_checkers/name_error_checkers.rb
44 /usr/share/ruby/did_you_mean/spell_checkers/method_name_checker.rb
45 /usr/share/ruby/did_you_mean/spell_checkers/key_error_checker.rb
46 /usr/share/ruby/did_you_mean/spell_checkers/null_checker.rb
47 /usr/share/ruby/did_you_mean/tree_spell_checker.rb
48 /usr/share/ruby/did_you_mean/spell_checkers/require_path_checker.rb
49 /usr/share/ruby/did_you_mean/spell_checkers/pattern_key_name_checker.rb
50 /usr/share/ruby/did_you_mean/formatter.rb
51 /usr/share/ruby/did_you_mean.rb
52 /usr/share/ruby/syntax_suggest/core_ext.rb
* Process memory map:
562a5047e000-562a5047f000 r--p 00000000 08:08 6739413 /usr/bin/ruby-mri
562a5047f000-562a50480000 r-xp 00001000 08:08 6739413 /usr/bin/ruby-mri
562a50480000-562a50481000 r--p 00002000 08:08 6739413 /usr/bin/ruby-mri
562a50481000-562a50482000 r--p 00002000 08:08 6739413 /usr/bin/ruby-mri
562a50482000-562a50483000 rw-p 00003000 08:08 6739413 /usr/bin/ruby-mri
562a51832000-562a51c68000 rw-p 00000000 00:00 0 [heap]
7feebc800000-7feebca51000 r--s 00000000 08:08 6732430 /usr/lib64/libc.so.6
7feebcc00000-7feebec0c000 r--s 00000000 08:08 6731115 /usr/lib/debug/usr/lib64/libruby.so.3.3.0-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64.debug
7feebee00000-7feec0e0c000 r--s 00000000 08:08 6731115 /usr/lib/debug/usr/lib64/libruby.so.3.3.0-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64.debug
7feec1000000-7feec1571000 r--s 00000000 08:08 6731218 /usr/lib64/libruby.so.3.3.0
7feec15d0000-7feec15e0000 rw-p 00000000 00:00 0
7feec16f0000-7feec1700000 rw-p 00000000 00:00 0
7feec1760000-7feec17a0000 rw-p 00000000 00:00 0
7feec17b0000-7feec1870000 rw-p 00000000 00:00 0
7feec187a000-7feec187f000 r--s 00000000 08:08 6731114 /usr/lib/debug/usr/bin/ruby-mri-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64.debug
7feec187f000-7feec1880000 ---p 00000000 00:00 0
7feec1880000-7feec1921000 rw-p 00000000 00:00 0
7feec1921000-7feec1922000 ---p 00000000 00:00 0
7feec1922000-7feec19c3000 rw-p 00000000 00:00 0
7feec19c3000-7feec19c4000 ---p 00000000 00:00 0
7feec19c4000-7feec1a65000 rw-p 00000000 00:00 0
7feec1a65000-7feec1a66000 ---p 00000000 00:00 0
7feec1a66000-7feec1b07000 rw-p 00000000 00:00 0
7feec1b07000-7feec1b08000 ---p 00000000 00:00 0
7feec1b08000-7feec1ba9000 rw-p 00000000 00:00 0
7feec1ba9000-7feec1baa000 ---p 00000000 00:00 0
7feec1baa000-7feec1c4b000 rw-p 00000000 00:00 0
7feec1c4b000-7feec1c4c000 ---p 00000000 00:00 0
7feec1c4c000-7feec1ced000 rw-p 00000000 00:00 0
7feec1ced000-7feec1cee000 ---p 00000000 00:00 0
7feec1cee000-7feec1d8f000 rw-p 00000000 00:00 0
7feec1d8f000-7feec1d90000 ---p 00000000 00:00 0
7feec1d90000-7feec1e31000 rw-p 00000000 00:00 0
7feec1e31000-7feec1e32000 ---p 00000000 00:00 0
7feec1e32000-7feec1ed3000 rw-p 00000000 00:00 0
7feec1ed3000-7feec1ed4000 ---p 00000000 00:00 0
7feec1ed4000-7feec1f75000 rw-p 00000000 00:00 0
7feec1f75000-7feec1f76000 ---p 00000000 00:00 0
7feec1f76000-7feec2017000 rw-p 00000000 00:00 0
7feec2017000-7feec2018000 ---p 00000000 00:00 0
7feec2018000-7feec20b9000 rw-p 00000000 00:00 0
7feec20b9000-7feec20ba000 ---p 00000000 00:00 0
7feec20ba000-7feec215b000 rw-p 00000000 00:00 0
7feec215b000-7feec215c000 ---p 00000000 00:00 0
7feec215c000-7feec21fd000 rw-p 00000000 00:00 0
7feec21fd000-7feec21fe000 ---p 00000000 00:00 0
7feec21fe000-7feec229f000 rw-p 00000000 00:00 0
7feec229f000-7feec22a0000 ---p 00000000 00:00 0
7feec22a0000-7feec2341000 rw-p 00000000 00:00 0
7feec2341000-7feec2342000 ---p 00000000 00:00 0
7feec2342000-7feec23e3000 rw-p 00000000 00:00 0
7feec23e3000-7feec23e4000 ---p 00000000 00:00 0
7feec23e4000-7feec2485000 rw-p 00000000 00:00 0
7feec2485000-7feec2486000 ---p 00000000 00:00 0
7feec2486000-7feec2527000 rw-p 00000000 00:00 0
7feec2527000-7feec2528000 ---p 00000000 00:00 0
7feec2528000-7feec25c9000 rw-p 00000000 00:00 0
7feec25c9000-7feec25ca000 ---p 00000000 00:00 0
7feec25ca000-7feec266b000 rw-p 00000000 00:00 0
7feec266b000-7feec266c000 ---p 00000000 00:00 0
7feec266c000-7feec270d000 rw-p 00000000 00:00 0
7feec270d000-7feec270e000 ---p 00000000 00:00 0
7feec270e000-7feec27af000 rw-p 00000000 00:00 0
7feec27af000-7feec27b0000 ---p 00000000 00:00 0
7feec27b0000-7feec2851000 rw-p 00000000 00:00 0
7feec2851000-7feec2852000 ---p 00000000 00:00 0
7feec2852000-7feec28f3000 rw-p 00000000 00:00 0
7feec28f3000-7feec28f4000 ---p 00000000 00:00 0
7feec28f4000-7feec2995000 rw-p 00000000 00:00 0
7feec2995000-7feec2996000 ---p 00000000 00:00 0
7feec2996000-7feec2a37000 rw-p 00000000 00:00 0
7feec2a37000-7feec2a38000 ---p 00000000 00:00 0
7feec2a38000-7feec2ad9000 rw-p 00000000 00:00 0
7feec2ad9000-7feec2ada000 ---p 00000000 00:00 0
7feec2ada000-7feec2b7b000 rw-p 00000000 00:00 0
7feec2b7b000-7feec2b7c000 ---p 00000000 00:00 0
7feec2b7c000-7feec2c1d000 rw-p 00000000 00:00 0
7feec2c1d000-7feec2c1e000 ---p 00000000 00:00 0
7feec2c1e000-7feec2cbf000 rw-p 00000000 00:00 0
7feec2cbf000-7feec2cc0000 ---p 00000000 00:00 0
7feec2cc0000-7feec3510000 rw-p 00000000 00:00 0
7feec3511000-7feec3516000 r--s 00000000 08:08 6731114 /usr/lib/debug/usr/bin/ruby-mri-3.3.0~20231127.1146gita07d84b63c-184.fc40.327.x86_64.debug
7feec3516000-7feec351a000 r--s 00000000 08:08 6739413 /usr/bin/ruby-mri
7feec351a000-7feec351b000 r--p 00000000 08:08 7079696 /builddir/build/BUILD/swig-4.1.1/TEST/bar.so
7feec351b000-7feec351c000 r-xp 00001000 08:08 7079696 /builddir/build/BUILD/swig-4.1.1/TEST/bar.so
7feec351c000-7feec351d000 r--p 00002000 08:08 7079696 /builddir/build/BUILD/swig-4.1.1/TEST/bar.so
7feec351d000-7feec351e000 r--p 00002000 08:08 7079696 /builddir/build/BUILD/swig-4.1.1/TEST/bar.so
7feec351e000-7feec351f000 rw-p 00003000 08:08 7079696 /builddir/build/BUILD/swig-4.1.1/TEST/bar.so
7feec351f000-7feedc990000 rw-p 00000000 00:00 0
7feedc990000-7feedc991000 r--p 00000000 08:08 6738604 /usr/lib64/ruby/monitor.so
7feedc991000-7feedc992000 r-xp 00001000 08:08 6738604 /usr/lib64/ruby/monitor.so
7feedc992000-7feedc993000 r--p 00002000 08:08 6738604 /usr/lib64/ruby/monitor.so
7feedc993000-7feedc994000 r--p 00002000 08:08 6738604 /usr/lib64/ruby/monitor.so
7feedc994000-7feedca96000 rw-p 00000000 00:00 0
7feedca96000-7feedcaa6000 r--p 00000000 08:08 6732433 /usr/lib64/libm.so.6
7feedcaa6000-7feedcb1c000 r-xp 00010000 08:08 6732433 /usr/lib64/libm.so.6
7feedcb1c000-7feedcb76000 r--p 00086000 08:08 6732433 /usr/lib64/libm.so.6
7feedcb76000-7feedcb77000 r--p 000df000 08:08 6732433 /usr/lib64/libm.so.6
7feedcb77000-7feedcb78000 rw-p 000e0000 08:08 6732433 /usr/lib64/libm.so.6
7feedcb78000-7feedcb89000 r--p 00000000 08:08 6732764 /usr/lib64/libgmp.so.10.4.1
7feedcb89000-7feedcc05000 r-xp 00011000 08:08 6732764 /usr/lib64/libgmp.so.10.4.1
7feedcc05000-7feedcc1a000 r--p 0008d000 08:08 6732764 /usr/lib64/libgmp.so.10.4.1
7feedcc1a000-7feedcc1c000 r--p 000a1000 08:08 6732764 /usr/lib64/libgmp.so.10.4.1
7feedcc1c000-7feedcc1d000 rw-p 000a3000 08:08 6732764 /usr/lib64/libgmp.so.10.4.1
7feedcc1d000-7feedcc43000 r--p 00000000 08:08 6732430 /usr/lib64/libc.so.6
7feedcc43000-7feedcda4000 r-xp 00026000 08:08 6732430 /usr/lib64/libc.so.6
7feedcda4000-7feedcdf2000 r--p 00187000 08:08 6732430 /usr/lib64/libc.so.6
7feedcdf2000-7feedcdf6000 r--p 001d4000 08:08 6732430 /usr/lib64/libc.so.6
7feedcdf6000-7feedcdf8000 rw-p 001d8000 08:08 6732430 /usr/lib64/libc.so.6
7feedcdf8000-7feedce00000 rw-p 00000000 00:00 0
7feedce00000-7feedce4a000 r--p 00000000 08:08 6731218 /usr/lib64/libruby.so.3.3.0
7feedce4a000-7feedd1c9000 r-xp 0004a000 08:08 6731218 /usr/lib64/libruby.so.3.3.0
7feedd1c9000-7feedd334000 r--p 003c9000 08:08 6731218 /usr/lib64/libruby.so.3.3.0
7feedd334000-7feedd34d000 r--p 00533000 08:08 6731218 /usr/lib64/libruby.so.3.3.0
7feedd34d000-7feedd34e000 rw-p 0054c000 08:08 6731218 /usr/lib64/libruby.so.3.3.0
7feedd34e000-7feedd363000 rw-p 00000000 00:00 0
7feedd365000-7feedd368000 rw-p 00000000 00:00 0
7feedd368000-7feedd36b000 r--p 00000000 08:08 6731236 /usr/lib64/libgcc_s-13-20231113.so.1
7feedd36b000-7feedd386000 r-xp 00003000 08:08 6731236 /usr/lib64/libgcc_s-13-20231113.so.1
7feedd386000-7feedd38a000 r--p 0001e000 08:08 6731236 /usr/lib64/libgcc_s-13-20231113.so.1
7feedd38a000-7feedd38b000 r--p 00021000 08:08 6731236 /usr/lib64/libgcc_s-13-20231113.so.1
7feedd38b000-7feedd38e000 rw-p 00000000 00:00 0
7feedd38e000-7feedd390000 r--p 00000000 08:08 6732782 /usr/lib64/libcrypt.so.2.0.0
7feedd390000-7feedd3a4000 r-xp 00002000 08:08 6732782 /usr/lib64/libcrypt.so.2.0.0
7feedd3a4000-7feedd3bd000 r--p 00016000 08:08 6732782 /usr/lib64/libcrypt.so.2.0.0
7feedd3bd000-7feedd3be000 r--p 0002e000 08:08 6732782 /usr/lib64/libcrypt.so.2.0.0
7feedd3be000-7feedd3c7000 rw-p 00000000 00:00 0
7feedd3c7000-7feedd3ca000 r--p 00000000 08:08 6732659 /usr/lib64/libz.so.1.2.13
7feedd3ca000-7feedd3d9000 r-xp 00003000 08:08 6732659 /usr/lib64/libz.so.1.2.13
7feedd3d9000-7feedd3df000 r--p 00012000 08:08 6732659 /usr/lib64/libz.so.1.2.13
7feedd3df000-7feedd3e0000 r--p 00018000 08:08 6732659 /usr/lib64/libz.so.1.2.13
7feedd3e0000-7feedd3e3000 rw-p 00000000 00:00 0
7feedd3e3000-7feedd3e4000 r--p 00000000 08:08 6738584 /usr/lib64/ruby/enc/trans/transdb.so
7feedd3e4000-7feedd3e5000 r-xp 00001000 08:08 6738584 /usr/lib64/ruby/enc/trans/transdb.so
7feedd3e5000-7feedd3e6000 r--p 00002000 08:08 6738584 /usr/lib64/ruby/enc/trans/transdb.so
7feedd3e6000-7feedd3e7000 r--p 00002000 08:08 6738584 /usr/lib64/ruby/enc/trans/transdb.so
7feedd3e7000-7feedd3e8000 rw-p 00000000 00:00 0
7feedd3e8000-7feedd3e9000 r--p 00000000 08:08 6732495 /usr/lib64/ruby/enc/encdb.so
7feedd3e9000-7feedd3ea000 r-xp 00001000 08:08 6732495 /usr/lib64/ruby/enc/encdb.so
7feedd3ea000-7feedd3eb000 r--p 00002000 08:08 6732495 /usr/lib64/ruby/enc/encdb.so
7feedd3eb000-7feedd3ec000 r--p 00002000 08:08 6732495 /usr/lib64/ruby/enc/encdb.so
7feedd3ec000-7feedd3ed000 rw-p 00000000 00:00 0
7feedd3ed000-7feedd3ee000 r--p 00000000 08:08 6732427 /usr/lib64/ld-linux-x86-64.so.2
7feedd3ee000-7feedd415000 r-xp 00001000 08:08 6732427 /usr/lib64/ld-linux-x86-64.so.2
7feedd415000-7feedd41f000 r--p 00028000 08:08 6732427 /usr/lib64/ld-linux-x86-64.so.2
7feedd41f000-7feedd421000 r--p 00031000 08:08 6732427 /usr/lib64/ld-linux-x86-64.so.2
7feedd421000-7feedd423000 rw-p 00033000 08:08 6732427 /usr/lib64/ld-linux-x86-64.so.2
7ffd9ea7e000-7ffd9f27d000 rw-p 00000000 00:00 0 [stack]
7ffd9f35d000-7ffd9f361000 r--p 00000000 00:00 0 [vvar]
7ffd9f361000-7ffd9f363000 r-xp 00000000 00:00 0 [vdso]
ffffffffff600000-ffffffffff601000 --xp 00000000 00:00 0 [vsyscall]
foofoo-test.sh: line 6: 141 Aborted (core dumped) ruby -I. foo.rb
Updated by nobu (Nobuyoshi Nakada) over 2 years ago
- Status changed from Open to Closed
Applied in changeset git|ca4755b59a7bdaaffbaef05474c8d8ee187e8d7d.
[Bug #20023] Resurrect fake string feature name before raising
Actions