[Bug #20023] Resurrect fake string feature name before raising